# schedulebot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  1week.pickle  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  data.pkl  pyproject.toml
configs/: color_graph.yaml  config_sample.yml
data/: 1week.gexf  2week.gexf
data/2023-01-11/: Предметы+группы.csv  Преподователи.csv
data/2023-01-14/: Teachers.csv
data/2023-01-15/: Subjects+Groups.csv  Subjects+Hours.csv  Teachers+Hours.csv
data/2023-01-17/: Room+Subject_Type.csv  Subjects+Groups.csv  Subjects+Hours.csv  Teachers+Hours.csv
data/2023-02-20/: Subjects+Hours.csv  Subjects_Teachers.csv  Teachers+Hours.csv
data/2023-02-26/: Lab+Room.csv  Room+Subject_Type.csv  Subjects+Groups.csv  Subjects+Lessons.csv  Subjects+Teachers.csv  Teachers+Lessons.csv
data/2023-05-03/: Subjects+Lessons.csv  Teachers+Lessons.csv
data/2023-05-05/: Lab+Room.csv  Room+Subject_Type.csv  Subjects+Groups.csv  Subjects+Teachers.csv
data/2023-05-11/: Lab+Room.csv  Teachers+Lessons.csv
data/2023-06-19/: rooms.csv  subjects.csv  teachers.csv
data/database/: data.db
data/graph/: 1week.gexf  1week.json  1week.pickle  1week_edge.json  1week_node.json  2week.gexf  2week.pickle  2week_edge.json  2week_node.json
data/timetable/: schedule.xlsx
git_hook/: git-hook.bat  git-hook.sh  git_hook_code
notebooks/: 00_data_generation.ipynb  01_data_generation.ipynb  01_eda.ipynb  EDA.ipynb  example.ipynb
notebooks/01_data_generation/: 01_data_generation.ipynb
notebooks/01_data_generation/data/2023-01-11_111/: Аудитории+особенности.csv
notebooks/basics/: 00_Python.ipynb  01_Python.ipynb  02_Numpy.ipynb  03_Numpy.ipynb  04_Numpy.ipynb  05_Matplotlib.ipynb  06_Pandas.ipynb  07_Pandas.ipynb  08_Pandas.ipynb  09_Seaborn.ipynb  my_first_file.csv  no_index.csv
schedulebot/: __init__.py  bot_configs.py  config.py  example.py
schedulebot/db/: client.py  models.py
schedulebot/genetic/: elitism.py  graphs.py
schedulebot/handlers/: command_handlers.py  reply_handlers.py
schedulebot/keyboards/: keyboards.py
schedulebot/lexicon/: ru_lexicon.py
schedulebot/services/: menu.py
schedulebot/utils/: data.py  fs.py  load.py  viz.py
scripts/: color_graph.py  config_sample.py  debug_graphs.py  load_data.py  run_bot.py
utils/: date_generation.py
